JEDIT 4.1 VERSION HISTORY

* Version 4.1pre10

Thanks to Kris Kopicki and Oliver Rutherfurd for contributing to this
release.

+ Enhancements:

- The text area no longer falls over if an exception is thrown while
  firing a caret or scroll event.

- Stricter checks for windows being out-of-bounds.

- Divider position in Global Options dialog box is now saved.

+ Bug Fixes:

- The Format Paragraph command was once again broken on Java 1.3.

- Installer's "auto" mode works now. The command line syntax has
  changed:

  java installer.Install auto <install directory>
    unix-script=<bin directory> unix-man=<man directory>

  The last two parameters are optional.

- EOL_SPAN_REGEXP rule was broken (Oliver Rutherfurd).

- Undoing all changes up to a save would not delete the autosave file,
  even though the buffer was no longer marked as "dirty".

- Fixed minor problem with expanding files when moving the caret outside
  the narrowed range.

- Fixed digit highlighting regexp since it didn't pick up 0xff00 (and
  various other combinations) properly.

- Installer didn't work on OS/2.

- "Toggle Line Separator" command now sets buffer dirty status.

- Splitting the view more than once could break.

- Fixed a NullPointerException when doing a "Replace All" over a
  directory right after a HyperSearch in the same directory, then
  closing some of the buffers touched by the "Replace All".

- Fixed display of docking buttons on Mac OS X (Kris Kopicki).

* Version 4.1pre9

Thanks to Chris Petersen, Iain Hewson, Kris Kopicki, Randolf Mock and
Reinout van Schouwen for contributing to this release.

+ Syntax Highlighting Changes:

- Added gettext mode (primarily used on Unix for translating programs
  to other languages) (Reinout van Schouwen).

- Added APDL mode (Randolf Mock).

- Updated CSS, PHP, Perl syntax highlighting (Chris Petersen).

+ Miscellaneous Changes:

- Global options dialog box remembers its size and position now.

- Much faster auto indent.
